# cmake

./: .gitignore  LBFGSppConfig.cmake  LICENSE  LuaBridgeConfig.cmake  README.md  TODO.org  alglibConfig.cmake  autodiff.patch  bogusConfig.cmake  clangformat.cmake  clangtidy.cmake  clangtools.cmake  cmdlineConfig.cmake  extproj.cmake.in  fetch_cpm.sh  gladConfig.cmake  glmConfig.cmake  iglConfig.cmake  imguiConfig.cmake  pardisoConfig.cmake  stbConfig.cmake  utility.cmake
core/: CPM.cmake  assert.cmake  cmake-core-assert.cmake  cmake-core-fs.cmake  cmake-core-package-cpm.cmake  cmake-core-package-v2.cmake  cmake-core-package.cmake  cmake-core-target-helper.cmake  extproj.cmake.bkp  extproj.cmake.in  fs.cmake  lamConfig.cmake.in  lam_add_target.cmake  lam_add_targets_from_glob.cmake  lam_add_unittest.cmake  lam_assert.cmake  lam_fs.cmake  lam_generate_git_meta.cmake  lam_glob_source_as_target.cmake  lam_install.cmake  lam_install_config.cmake.in  lam_package_cpm.cmake  lam_utils.cmake  package_cpm.cmake  package_cpm_v2.cmake  target_helper.cmake  utils.cmake
core/deprecated/: extproj.cmake.in
core/git_meta/: git_meta.cpp.in  git_meta.hpp.in  git_watcher.cmake  main.cmake
find_modules/: FindIpopt.cmake  FindSuiteSparse.cmake
luajit/: luajit_import.h
packages_bkp/: pkg_catch2.cmake  pkg_cli11.cmake  pkg_csv-parser.cmake  pkg_entt.cmake  pkg_fastor.cmake  pkg_glad.cmake  pkg_happly.cmake  pkg_imgui.cmake  pkg_msgpack.cmake  pkg_openmesh.cmake  pkg_pugixml.cmake  pkg_stb.cmake  pkg_tl_optional.cmake
packages_bkp/autodiff/: pkg_autodiff.cmake
patches/: autodiff.patch  suitesparse.cholmod.patch
scripts/: cpm_hash.patch  fetch_cpm.sh  gen_package.py  packages.json
tests/assert/: CMakeLists.txt
tests/check_infer_uri/: CMakeLists.txt
tests/manage3rd/: CMakeLists.txt
tests/package/: .gitignore  CMakeLists.txt
tests/package-cpm/: CMakeLists.txt
tests/packagev2/: CMakeLists.txt
tests/packagev2/child/: CMakeLists.txt
tests/playground/: CMakeLists.txt
tests/require_package/: CMakeLists.txt
tests/show-diff-source-dir/: CMakeLists.txt
tests/show-diff-source-dir/subdir/: CMakeLists.txt
tests/show-diff-source-dir/subproj/: CMakeLists.txt
tests/show-diff-source-dir/subproj/subsubdir/: CMakeLists.txt
tests/show-diff-source-dir/subproj/subsubproj/: CMakeLists.txt
tests/show_latest_tag/: CMakeLists.txt
tests/target_helper/: CMakeLists.txt  demo.lib.cc  demo.with.lib.cc
tests/test_assert/: CMakeLists.txt
tests/test_dep/: CMakeLists.txt  module.cmake
tests/test_include/: CMakeLists.txt
tests/test_include/list/: test.cmake
tests/test_new_assert/: CMakeLists.txt
tests/test_new_packaage/: CMakeLists.txt
tests/test_package/: CMakeLists.txt
tests/test_package/cases/: README
tests/test_package/cases/add_package/: CMakeLists.txt
tests/test_package/cases/add_prebuild_package/: CMakeLists.txt
tests/test_package/cases/add_prebuild_package_diff_version/: CMakeLists.txt
tests/test_package/cases/add_prebuilt_package/: CMakeLists.txt
tests/test_package/cases/add_prebuilt_package_diff_version/: CMakeLists.txt
tests/test_package/cases/declare_package/: CMakeLists.txt
tests/test_package/cases/declare_package_no_prebuild/: CMakeLists.txt
tests/test_package/cases/declare_package_no_prebuilt/: CMakeLists.txt
tests/test_package/cases/declare_prebuild_package/: CMakeLists.txt
tests/test_package/cases/declare_prebuilt_package/: CMakeLists.txt
tests/test_package/cases/install_and_find_package/: CMakeLists.txt
tests/test_package/cases/install_and_find_package_diff_version/: CMakeLists.txt
tests/test_package/cases/test_not_required/: CMakeLists.txt
tests/test_package/cases/test_packages_def/: CMakeLists.txt
tests/test_package_utils/: CMakeLists.txt
tests/test_stack/: CMakeLists.txt
tools/: ccache.cmake  clang-format.cmake  code-coverage.cmake  cppcheck.cmake  link-time-optimization.cmake  memcheck.cmake  sanitizers.cmake
tools/lam/: ccache.cmake  clang-format.cmake  clang-tidy.cmake  code-coverage.cmake  cppcheck.cmake  git-meta.cmake  link-time-optimization.cmake  memcheck.cmake  sanitizers.cmake
